<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:background="@android:color/holo_red_dark"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_unit_test"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="UnitTest"
                android:textAllCaps="false"/>

            <TextView
                android:id="@+id/text_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:textColor="@android:color/black"
                android:textSize="19sp"/>
        </LinearLayout>


        <WebView
            android:id="@+id/web_view"
            android:layout_width="match_parent"
            android:layout_height="500dp"/>
    </LinearLayout>
</ScrollView>


